[gd_scene load_steps=8 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://main_menu_screen.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenic_view.tscn" type="PackedScene" id=3]
[ext_resource path="res://help_screen.tscn" type="PackedScene" id=4]
[ext_resource path="res://score_screen.tscn" type="PackedScene" id=5]
[ext_resource path="res://audio/Eric_Skiff_-_Underclocked_underunderclocked_mix.mp3" type="AudioStream" id=6]
[ext_resource path="res://audio/Joshua_McLean_-_Mountain_Trials.mp3" type="AudioStream" id=7]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScenicView" parent="UI" instance=ExtResource( 3 )]

[node name="MainMenuScreen" parent="UI" instance=ExtResource( 2 )]

[node name="HelpScreen" parent="UI" instance=ExtResource( 4 )]
visible = false

[node name="ScoresScreen" parent="UI" instance=ExtResource( 5 )]
visible = false

[node name="GameContainer" type="Node2D" parent="."]

[node name="Audio" type="Node" parent="."]

[node name="Music1" type="AudioStreamPlayer" parent="Audio"]
pause_mode = 2
stream = ExtResource( 6 )
volume_db = -22.0

[node name="Music2" type="AudioStreamPlayer" parent="Audio"]
pause_mode = 2
stream = ExtResource( 7 )
volume_db = -20.0

[connection signal="settings_button_pressed" from="UI/MainMenuScreen" to="." method="_on_MainMenuScreen_settings_button_pressed"]
[connection signal="start_button_pressed" from="UI/MainMenuScreen" to="." method="_on_MainMenuScreen_start_button_pressed"]
